force-app/main/default/objects/EndPoint__mdt/fields/Codigo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Cliente__c</fullName>
    <label>Codigo Cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>