force-app/main/default/objects/EndPoint__mdt/fields/contrase_a__c.field-meta.xml
<CustomField>
    <fullName>contrase_a__c</fullName>
    <label>contraseña</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>