force-app/main/default/objects/EndPoint__mdt/fields/usuario__c.field-meta.xml
<CustomField>
    <fullName>usuario__c</fullName>
    <label>usuario</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>